--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "mongoose": "^6.4.0",
     "next": "12.1.6",
     "react": "18.2.0",
